tests/cases/fail/foreach_non_array.cs
class Program { static void Main() { int x = 1; foreach (int n in x) { Console.WriteLine(n); } } }
